# value-based-care-bundled-treatment-engine

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-aws.yml
data/sample/: claim_header.csv  claim_line.csv  diagnosis.csv  member.csv  member_eligibility.csv  provider.csv
data/sample/bundled/: code_set.csv  code_set_member.csv  episode_definition.csv  episode_rule.csv  episode_rule_window.csv
docs/: architecture.md  data_dictionary.md  deployment_aws.md  episodes.md  operations.md  security_baseline.md
infra/aws/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: container_entrypoint.sh  generate_synthetic_data.py  pipeline_tasks.py  run_bundled_pipeline.sh  run_local_demo.sh
sql/queries/: ed_visits.sql  pmpm_cost.sql
sql/schema/: postgres.sql
src/vbc_claims/: cli.py  config.py  observability.py
src/vbc_claims/analytics/: reporting.py
src/vbc_claims/api/: __init__.py  main.py  schemas.py
src/vbc_claims/contracts/: shared_savings.py
src/vbc_claims/episodes/: __init__.py  engine.py
src/vbc_claims/etl/: init_db.py  load_episodes.py  load_normalized.py  load_sample.py  pipeline.py  seed_contract.py  synthetic.py  validate.py
src/vbc_claims/io/: db.py
src/vbc_claims/measures/: bundles.py  cost.py
src/vbc_claims/quality/: __init__.py  checks.py
src/vbc_claims/risk/: hcc.py
src/vbc_claims/transforms/: member_months.py
tests/: test_api.py  test_integration_pipeline.py  test_smoke.py  test_validate.py
(+3 files in other folders)
