[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vbc-claims"
version = "0.1.0"
description = "Open-source VBC bundled treatment platform: normalized medical and pharmacy claims, episode catalog, deterministic multi-episode assignment, and reporting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Team" }]
keywords = ["claims", "value-based-care", "healthcare", "analytics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]

dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.0.20240311",
  "httpx>=0.27.0",
]

[project.scripts]
vbc-claims = "vbc_claims.cli:app"
vbc-claims-api = "vbc_claims.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/vbc_claims"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*"]
ignore_missing_imports = true
